restart/semantico_tentativa/sintatico.automaton
State 0:
chunk' -> . chunk [ # ]
-- On WRITE shift to state 1
-- On WHILE shift to state 37
-- On SUBTRACAO shift to state 3
-- On STRING shift to state 4
-- On READ shift to state 5
-- On NOT shift to state 7
-- On INT shift to state 8
-- On IF shift to state 42
-- On ID shift to state 47
-- On FUNCTION shift to state 55
-- On FLOAT shift to state 10
-- On ABREPARENTESE shift to state 11
-- On variavel shift to state 12
-- On unop shift to state 13
-- On stat shift to state 60
-- On list(stat) shift to state 66
-- On functioncall shift to state 62
-- On expressao shift to state 63
-- On chunk shift to state 83
-- On block shift to state 84
-- On RETURN reduce production list(stat) -> 
-- On EOF reduce production list(stat) -> 

State 1:
stat -> WRITE . ABREPARENTESE expressao FECHAPARENTESE [ WRITE WHILE SUBTRACAO STRING RETURN READ NOT INT IF ID FUNCTION FLOAT EOF END ELSE ABREPARENTESE ]
-- On ABREPARENTESE shift to state 2

State 2:
stat -> WRITE ABREPARENTESE . expressao FECHAPARENTESE [ WRITE WHILE SUBTRACAO STRING RETURN READ NOT INT IF ID FUNCTION FLOAT EOF END ELSE ABREPARENTESE ]
-- On SUBTRACAO shift to state 3
-- On STRING shift to state 4
-- On READ shift to state 5
-- On NOT shift to state 7
-- On INT shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On ABREPARENTESE shift to state 11
-- On variavel shift to state 12
-- On unop shift to state 13
-- On expressao shift to state 35

State 3:
unop -> SUBTRACAO . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production unop -> SUBTRACAO 
-- On STRING reduce production unop -> SUBTRACAO 
-- On READ reduce production unop -> SUBTRACAO 
-- On NOT reduce production unop -> SUBTRACAO 
-- On INT reduce production unop -> SUBTRACAO 
-- On ID reduce production unop -> SUBTRACAO 
-- On FLOAT reduce production unop -> SUBTRACAO 
-- On ABREPARENTESE reduce production unop -> SUBTRACAO 

State 4:
expressao -> STRING . [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On WRITE reduce production expressao -> STRING 
-- On WHILE reduce production expressao -> STRING 
-- On VIRGULA reduce production expressao -> STRING 
-- On SUBTRACAO reduce production expressao -> STRING 
-- On STRING reduce production expressao -> STRING 
-- On SOMA reduce production expressao -> STRING 
-- On RETURN reduce production expressao -> STRING 
-- On READ reduce production expressao -> STRING 
-- On PONTOEVIRGULA reduce production expressao -> STRING 
-- On OR reduce production expressao -> STRING 
-- On NOT reduce production expressao -> STRING 
-- On MULTIPLICACAO reduce production expressao -> STRING 
-- On MODULO reduce production expressao -> STRING 
-- On MENORIGUAL reduce production expressao -> STRING 
-- On MENOR reduce production expressao -> STRING 
-- On MAIORIGUAL reduce production expressao -> STRING 
-- On MAIOR reduce production expressao -> STRING 
-- On INT reduce production expressao -> STRING 
-- On IGUALDADE reduce production expressao -> STRING 
-- On IF reduce production expressao -> STRING 
-- On ID reduce production expressao -> STRING 
-- On FUNCTION reduce production expressao -> STRING 
-- On FLOAT reduce production expressao -> STRING 
-- On FECHAPARENTESE reduce production expressao -> STRING 
-- On EXPONENCIACAO reduce production expressao -> STRING 
-- On EOF reduce production expressao -> STRING 
-- On END reduce production expressao -> STRING 
-- On ELSE reduce production expressao -> STRING 
-- On DIVISAO reduce production expressao -> STRING 
-- On DIFERENTE reduce production expressao -> STRING 
-- On ATRIBUICAO reduce production expressao -> STRING 
-- On AND reduce production expressao -> STRING 
-- On ABREPARENTESE reduce production expressao -> STRING 

State 5:
expressao -> READ . ABREPARENTESE expressao FECHAPARENTESE [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On ABREPARENTESE shift to state 6

State 6:
expressao -> READ ABREPARENTESE . expressao FECHAPARENTESE [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On SUBTRACAO shift to state 3
-- On STRING shift to state 4
-- On READ shift to state 5
-- On NOT shift to state 7
-- On INT shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On ABREPARENTESE shift to state 11
-- On variavel shift to state 12
-- On unop shift to state 13
-- On expressao shift to state 33

State 7:
unop -> NOT . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production unop -> NOT 
-- On STRING reduce production unop -> NOT 
-- On READ reduce production unop -> NOT 
-- On NOT reduce production unop -> NOT 
-- On INT reduce production unop -> NOT 
-- On ID reduce production unop -> NOT 
-- On FLOAT reduce production unop -> NOT 
-- On ABREPARENTESE reduce production unop -> NOT 

State 8:
expressao -> INT . [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On WRITE reduce production expressao -> INT 
-- On WHILE reduce production expressao -> INT 
-- On VIRGULA reduce production expressao -> INT 
-- On SUBTRACAO reduce production expressao -> INT 
-- On STRING reduce production expressao -> INT 
-- On SOMA reduce production expressao -> INT 
-- On RETURN reduce production expressao -> INT 
-- On READ reduce production expressao -> INT 
-- On PONTOEVIRGULA reduce production expressao -> INT 
-- On OR reduce production expressao -> INT 
-- On NOT reduce production expressao -> INT 
-- On MULTIPLICACAO reduce production expressao -> INT 
-- On MODULO reduce production expressao -> INT 
-- On MENORIGUAL reduce production expressao -> INT 
-- On MENOR reduce production expressao -> INT 
-- On MAIORIGUAL reduce production expressao -> INT 
-- On MAIOR reduce production expressao -> INT 
-- On INT reduce production expressao -> INT 
-- On IGUALDADE reduce production expressao -> INT 
-- On IF reduce production expressao -> INT 
-- On ID reduce production expressao -> INT 
-- On FUNCTION reduce production expressao -> INT 
-- On FLOAT reduce production expressao -> INT 
-- On FECHAPARENTESE reduce production expressao -> INT 
-- On EXPONENCIACAO reduce production expressao -> INT 
-- On EOF reduce production expressao -> INT 
-- On END reduce production expressao -> INT 
-- On ELSE reduce production expressao -> INT 
-- On DIVISAO reduce production expressao -> INT 
-- On DIFERENTE reduce production expressao -> INT 
-- On ATRIBUICAO reduce production expressao -> INT 
-- On AND reduce production expressao -> INT 
-- On ABREPARENTESE reduce production expressao -> INT 

State 9:
variavel -> ID . [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On WRITE reduce production variavel -> ID 
-- On WHILE reduce production variavel -> ID 
-- On VIRGULA reduce production variavel -> ID 
-- On SUBTRACAO reduce production variavel -> ID 
-- On STRING reduce production variavel -> ID 
-- On SOMA reduce production variavel -> ID 
-- On RETURN reduce production variavel -> ID 
-- On READ reduce production variavel -> ID 
-- On PONTOEVIRGULA reduce production variavel -> ID 
-- On OR reduce production variavel -> ID 
-- On NOT reduce production variavel -> ID 
-- On MULTIPLICACAO reduce production variavel -> ID 
-- On MODULO reduce production variavel -> ID 
-- On MENORIGUAL reduce production variavel -> ID 
-- On MENOR reduce production variavel -> ID 
-- On MAIORIGUAL reduce production variavel -> ID 
-- On MAIOR reduce production variavel -> ID 
-- On INT reduce production variavel -> ID 
-- On IGUALDADE reduce production variavel -> ID 
-- On IF reduce production variavel -> ID 
-- On ID reduce production variavel -> ID 
-- On FUNCTION reduce production variavel -> ID 
-- On FLOAT reduce production variavel -> ID 
-- On FECHAPARENTESE reduce production variavel -> ID 
-- On EXPONENCIACAO reduce production variavel -> ID 
-- On EOF reduce production variavel -> ID 
-- On END reduce production variavel -> ID 
-- On ELSE reduce production variavel -> ID 
-- On DIVISAO reduce production variavel -> ID 
-- On DIFERENTE reduce production variavel -> ID 
-- On ATRIBUICAO reduce production variavel -> ID 
-- On AND reduce production variavel -> ID 
-- On ABREPARENTESE reduce production variavel -> ID 

State 10:
expressao -> FLOAT . [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On WRITE reduce production expressao -> FLOAT 
-- On WHILE reduce production expressao -> FLOAT 
-- On VIRGULA reduce production expressao -> FLOAT 
-- On SUBTRACAO reduce production expressao -> FLOAT 
-- On STRING reduce production expressao -> FLOAT 
-- On SOMA reduce production expressao -> FLOAT 
-- On RETURN reduce production expressao -> FLOAT 
-- On READ reduce production expressao -> FLOAT 
-- On PONTOEVIRGULA reduce production expressao -> FLOAT 
-- On OR reduce production expressao -> FLOAT 
-- On NOT reduce production expressao -> FLOAT 
-- On MULTIPLICACAO reduce production expressao -> FLOAT 
-- On MODULO reduce production expressao -> FLOAT 
-- On MENORIGUAL reduce production expressao -> FLOAT 
-- On MENOR reduce production expressao -> FLOAT 
-- On MAIORIGUAL reduce production expressao -> FLOAT 
-- On MAIOR reduce production expressao -> FLOAT 
-- On INT reduce production expressao -> FLOAT 
-- On IGUALDADE reduce production expressao -> FLOAT 
-- On IF reduce production expressao -> FLOAT 
-- On ID reduce production expressao -> FLOAT 
-- On FUNCTION reduce production expressao -> FLOAT 
-- On FLOAT reduce production expressao -> FLOAT 
-- On FECHAPARENTESE reduce production expressao -> FLOAT 
-- On EXPONENCIACAO reduce production expressao -> FLOAT 
-- On EOF reduce production expressao -> FLOAT 
-- On END reduce production expressao -> FLOAT 
-- On ELSE reduce production expressao -> FLOAT 
-- On DIVISAO reduce production expressao -> FLOAT 
-- On DIFERENTE reduce production expressao -> FLOAT 
-- On ATRIBUICAO reduce production expressao -> FLOAT 
-- On AND reduce production expressao -> FLOAT 
-- On ABREPARENTESE reduce production expressao -> FLOAT 

State 11:
expressao -> ABREPARENTESE . expressao FECHAPARENTESE [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On SUBTRACAO shift to state 3
-- On STRING shift to state 4
-- On READ shift to state 5
-- On NOT shift to state 7
-- On INT shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On ABREPARENTESE shift to state 11
-- On variavel shift to state 12
-- On unop shift to state 13
-- On expressao shift to state 31

State 12:
expressao -> variavel . [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On WRITE reduce production expressao -> variavel 
-- On WHILE reduce production expressao -> variavel 
-- On VIRGULA reduce production expressao -> variavel 
-- On SUBTRACAO reduce production expressao -> variavel 
-- On STRING reduce production expressao -> variavel 
-- On SOMA reduce production expressao -> variavel 
-- On RETURN reduce production expressao -> variavel 
-- On READ reduce production expressao -> variavel 
-- On PONTOEVIRGULA reduce production expressao -> variavel 
-- On OR reduce production expressao -> variavel 
-- On NOT reduce production expressao -> variavel 
-- On MULTIPLICACAO reduce production expressao -> variavel 
-- On MODULO reduce production expressao -> variavel 
-- On MENORIGUAL reduce production expressao -> variavel 
-- On MENOR reduce production expressao -> variavel 
-- On MAIORIGUAL reduce production expressao -> variavel 
-- On MAIOR reduce production expressao -> variavel 
-- On INT reduce production expressao -> variavel 
-- On IGUALDADE reduce production expressao -> variavel 
-- On IF reduce production expressao -> variavel 
-- On ID reduce production expressao -> variavel 
-- On FUNCTION reduce production expressao -> variavel 
-- On FLOAT reduce production expressao -> variavel 
-- On FECHAPARENTESE reduce production expressao -> variavel 
-- On EXPONENCIACAO reduce production expressao -> variavel 
-- On EOF reduce production expressao -> variavel 
-- On END reduce production expressao -> variavel 
-- On ELSE reduce production expressao -> variavel 
-- On DIVISAO reduce production expressao -> variavel 
-- On DIFERENTE reduce production expressao -> variavel 
-- On ATRIBUICAO reduce production expressao -> variavel 
-- On AND reduce production expressao -> variavel 
-- On ABREPARENTESE reduce production expressao -> variavel 

State 13:
expressao -> unop . expressao [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On SUBTRACAO shift to state 3
-- On STRING shift to state 4
-- On READ shift to state 5
-- On NOT shift to state 7
-- On INT shift to state 8
-- On ID shift to state 9
-- On FLOAT shift to state 10
-- On ABREPARENTESE shift to state 11
-- On variavel shift to state 12
-- On unop shift to state 13
-- On expressao shift to state 14

State 14:
expressao -> expressao . binop expressao [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
expressao -> unop expressao . [ WRITE WHILE VIRGULA SUBTRACAO STRING SOMA RETURN READ PONTOEVIRGULA OR NOT MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR INT IGUALDADE IF ID FUNCTION FLOAT FECHAPARENTESE EXPONENCIACAO EOF END ELSE DIVISAO DIFERENTE ATRIBUICAO AND ABREPARENTESE ]
-- On SUBTRACAO shift to state 15
-- On SOMA shift to state 16
-- On OR shift to state 17
-- On MULTIPLICACAO shift to state 18
-- On MODULO shift to state 19
-- On MENORIGUAL shift to state 20
-- On MENOR shift to state 21
-- On MAIORIGUAL shift to state 22
-- On MAIOR shift to state 23
-- On IGUALDADE shift to state 24
-- On EXPONENCIACAO shift to state 25
-- On DIVISAO shift to state 26
-- On DIFERENTE shift to state 27
-- On AND shift to state 28
-- On binop shift to state 29
-- On WRITE reduce production expressao -> unop expressao 
-- On WHILE reduce production expressao -> unop expressao 
-- On VIRGULA reduce production expressao -> unop expressao 
-- On SUBTRACAO reduce production expressao -> unop expressao 
-- On STRING reduce production expressao -> unop expressao 
-- On SOMA reduce production expressao -> unop expressao 
-- On RETURN reduce production expressao -> unop expressao 
-- On READ reduce production expressao -> unop expressao 
-- On PONTOEVIRGULA reduce production expressao -> unop expressao 
-- On OR reduce production expressao -> unop expressao 
-- On NOT reduce production expressao -> unop expressao 
-- On MULTIPLICACAO reduce production expressao -> unop expressao 
-- On MODULO reduce production expressao -> unop expressao 
-- On MENORIGUAL reduce production expressao -> unop expressao 
-- On MENOR reduce production expressao -> unop expressao 
-- On MAIORIGUAL reduce production expressao -> unop expressao 
-- On MAIOR reduce production expressao -> unop expressao 
-- On INT reduce production expressao -> unop expressao 
-- On IGUALDADE reduce production expressao -> unop expressao 
-- On IF reduce production expressao -> unop expressao 
-- On ID reduce production expressao -> unop expressao 
-- On FUNCTION reduce production expressao -> unop expressao 
-- On FLOAT reduce production expressao -> unop expressao 
-- On FECHAPARENTESE reduce production expressao -> unop expressao 
-- On EXPONENCIACAO reduce production expressao -> unop expressao 
-- On EOF reduce production expressao -> unop expressao 
-- On END reduce production expressao -> unop expressao 
-- On ELSE reduce production expressao -> unop expressao 
-- On DIVISAO reduce production expressao -> unop expressao 
-- On DIFERENTE reduce production expressao -> unop expressao 
-- On ATRIBUICAO reduce production expressao -> unop expressao 
-- On AND reduce production expressao -> unop expressao 
-- On ABREPARENTESE reduce production expressao -> unop expressao 
** Conflict on SUBTRACAO SOMA OR MULTIPLICACAO MODULO MENORIGUAL MENOR MAIORIGUAL MAIOR IGUALDADE EXPONENCIACAO DIVISAO DIFERENTE AND

State 15:
binop -> SUBTRACAO . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> SUBTRACAO 
-- On STRING reduce production binop -> SUBTRACAO 
-- On READ reduce production binop -> SUBTRACAO 
-- On NOT reduce production binop -> SUBTRACAO 
-- On INT reduce production binop -> SUBTRACAO 
-- On ID reduce production binop -> SUBTRACAO 
-- On FLOAT reduce production binop -> SUBTRACAO 
-- On ABREPARENTESE reduce production binop -> SUBTRACAO 

State 16:
binop -> SOMA . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> SOMA 
-- On STRING reduce production binop -> SOMA 
-- On READ reduce production binop -> SOMA 
-- On NOT reduce production binop -> SOMA 
-- On INT reduce production binop -> SOMA 
-- On ID reduce production binop -> SOMA 
-- On FLOAT reduce production binop -> SOMA 
-- On ABREPARENTESE reduce production binop -> SOMA 

State 17:
binop -> OR . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> OR 
-- On STRING reduce production binop -> OR 
-- On READ reduce production binop -> OR 
-- On NOT reduce production binop -> OR 
-- On INT reduce production binop -> OR 
-- On ID reduce production binop -> OR 
-- On FLOAT reduce production binop -> OR 
-- On ABREPARENTESE reduce production binop -> OR 

State 18:
binop -> MULTIPLICACAO . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> MULTIPLICACAO 
-- On STRING reduce production binop -> MULTIPLICACAO 
-- On READ reduce production binop -> MULTIPLICACAO 
-- On NOT reduce production binop -> MULTIPLICACAO 
-- On INT reduce production binop -> MULTIPLICACAO 
-- On ID reduce production binop -> MULTIPLICACAO 
-- On FLOAT reduce production binop -> MULTIPLICACAO 
-- On ABREPARENTESE reduce production binop -> MULTIPLICACAO 

State 19:
binop -> MODULO . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> MODULO 
-- On STRING reduce production binop -> MODULO 
-- On READ reduce production binop -> MODULO 
-- On NOT reduce production binop -> MODULO 
-- On INT reduce production binop -> MODULO 
-- On ID reduce production binop -> MODULO 
-- On FLOAT reduce production binop -> MODULO 
-- On ABREPARENTESE reduce production binop -> MODULO 

State 20:
binop -> MENORIGUAL . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> MENORIGUAL 
-- On STRING reduce production binop -> MENORIGUAL 
-- On READ reduce production binop -> MENORIGUAL 
-- On NOT reduce production binop -> MENORIGUAL 
-- On INT reduce production binop -> MENORIGUAL 
-- On ID reduce production binop -> MENORIGUAL 
-- On FLOAT reduce production binop -> MENORIGUAL 
-- On ABREPARENTESE reduce production binop -> MENORIGUAL 

State 21:
binop -> MENOR . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> MENOR 
-- On STRING reduce production binop -> MENOR 
-- On READ reduce production binop -> MENOR 
-- On NOT reduce production binop -> MENOR 
-- On INT reduce production binop -> MENOR 
-- On ID reduce production binop -> MENOR 
-- On FLOAT reduce production binop -> MENOR 
-- On ABREPARENTESE reduce production binop -> MENOR 

State 22:
binop -> MAIORIGUAL . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> MAIORIGUAL 
-- On STRING reduce production binop -> MAIORIGUAL 
-- On READ reduce production binop -> MAIORIGUAL 
-- On NOT reduce production binop -> MAIORIGUAL 
-- On INT reduce production binop -> MAIORIGUAL 
-- On ID reduce production binop -> MAIORIGUAL 
-- On FLOAT reduce production binop -> MAIORIGUAL 
-- On ABREPARENTESE reduce production binop -> MAIORIGUAL 

State 23:
binop -> MAIOR . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> MAIOR 
-- On STRING reduce production binop -> MAIOR 
-- On READ reduce production binop -> MAIOR 
-- On NOT reduce production binop -> MAIOR 
-- On INT reduce production binop -> MAIOR 
-- On ID reduce production binop -> MAIOR 
-- On FLOAT reduce production binop -> MAIOR 
-- On ABREPARENTESE reduce production binop -> MAIOR 

State 24:
binop -> IGUALDADE . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> IGUALDADE 
-- On STRING reduce production binop -> IGUALDADE 
-- On READ reduce production binop -> IGUALDADE 
-- On NOT reduce production binop -> IGUALDADE 
-- On INT reduce production binop -> IGUALDADE 
-- On ID reduce production binop -> IGUALDADE 
-- On FLOAT reduce production binop -> IGUALDADE 
-- On ABREPARENTESE reduce production binop -> IGUALDADE 

State 25:
binop -> EXPONENCIACAO . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> EXPONENCIACAO 
-- On STRING reduce production binop -> EXPONENCIACAO 
-- On READ reduce production binop -> EXPONENCIACAO 
-- On NOT reduce production binop -> EXPONENCIACAO 
-- On INT reduce production binop -> EXPONENCIACAO 
-- On ID reduce production binop -> EXPONENCIACAO 
-- On FLOAT reduce production binop -> EXPONENCIACAO 
-- On ABREPARENTESE reduce production binop -> EXPONENCIACAO 

State 26:
binop -> DIVISAO . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> DIVISAO 
-- On STRING reduce production binop -> DIVISAO 
-- On READ reduce production binop -> DIVISAO 
-- On NOT reduce production binop -> DIVISAO 
-- On INT reduce production binop -> DIVISAO 
-- On ID reduce production binop -> DIVISAO 
-- On FLOAT reduce production binop -> DIVISAO 
-- On ABREPARENTESE reduce production binop -> DIVISAO 

State 27:
binop -> DIFERENTE . [ SUBTRACAO STRING READ NOT INT ID FLOAT ABREPARENTESE ]
-- On SUBTRACAO reduce production binop -> DIFERENTE 
-- On STRING reduce production binop -> DIFERENTE 
-- On READ reduce production binop -> DIFERENTE 
-- On NOT reduce production binop -> DIFERENTE 
-- On INT reduce production binop -> DIFERENTE 
-- On ID reduce production binop -> DIFERENTE 
-- On FLOAT reduce production binop -> DIFERENTE 
-- On ABREPARENTESE reduce production binop -> DIFERENTE 
